<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.byunghwa.quizapp.MainActivity">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="Quiz App"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="Simple Spanish Questions" />

        <LinearLayout
            android:id="@+id/llFirstQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/subtitle"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_question" />

            <EditText
                android:id="@+id/etFirstQuestion"
                android:focusableInTouchMode="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="In English" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSecondQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llFirstQuestion"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_question" />

            <RadioGroup
                android:id="@+id/rgSecondQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="La mujer"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="La leche"/>

                <RadioButton
                    android:id="@+id/rbApple"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="La manzana"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="El niño"/>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llThirdQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llSecondQuestion"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/third_question" />

            <ImageView
                android:src="@drawable/the_woman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            
            <RadioGroup
                android:id="@+id/rgThirdQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">
                
                <RadioButton
                    android:id="@+id/rbWoman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="La mujer"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="El niño"/>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llFourthQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llThirdQuestion"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fourth_question" />

            <CheckBox
                android:id="@+id/cbFirst"
                android:text="la arroz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/cbSecond"
                android:text="la salsa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/cbThird"
                android:text="el huevo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/cbFourth"
                android:text="el jugo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llFifthQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llFourthQuestion"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fifth_question" />

            <EditText
                android:id="@+id/etFifthQuestion"
                android:focusableInTouchMode="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="In Spanish" />

        </LinearLayout>

        <Button
            android:id="@+id/bnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/llFifthQuestion"/>
        
    </RelativeLayout>
</ScrollView>
